Removed copying data to custom entries/functions/conditions - replaced by vanilla classes. Removed Mixins